@startuml
entity Question {
  * id : int
  * text : string
  * type : string  // e.g., 'multiple_choice' or 'text'
}

entity Survey {
  * id : int
  * title : string
  * description : string
}

entity SurveyQuestion {
  * survey_id : int
  * question_id : int
  * order : int
}

entity Response {
  * id : int
  * survey_id : int
  * respondent_id : int
  * response_date : datetime
}

entity ResponseDetail {
  * response_id : int
  * question_id : int
  * answer : string
  -- For multiple_choice type, this stores the selected option ID or text.
}

entity PossibleAnswer {
  * id : int
  * question_id : int
  * text : string
}

Question "1" -- "0..*" SurveyQuestion : includes
Survey "1" -- "0..*" SurveyQuestion : has
Survey "1" -- "0..*" Response : received
Response "1" -- "0..*" ResponseDetail : contains
Question "1" -- "0..*" ResponseDetail : answered
Question "1" -- "0..*" PossibleAnswer : has
@enduml

